# rust-dogstatsd

./: .travis.yml  Cargo.toml  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml  release.yml
examples/: client.rs
src/: client.rs  lib.rs
