[package]
name = "datadog-statsd"
version = "0.1.1"
description = "A dogstatsd client for rust."
homepage = "https://github.com/minato128/rust-dogstatsd"
repository = "https://github.com/minato128/rust-dogstatsd"
documentation = "https://docs.rs/datadog-statsd/"
readme = "README.md"
license = "MIT"
authors = ["Mark Story <mark@mark-story.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
]
edition = "2018"
keywords = [ "datadog", "dogstatsd", "statsd" ]

[dependencies]
rand = "^0.3"
