[package]
name = "datadog-statsd"
version = "0.2.0"
description = "A dogstatsd client for rust."
homepage = "https://github.com/quasi-coherent/rust-dogstatsd"
repository = "https://github.com/quasi-coherent/rust-dogstatsd"
readme = "README.md"
license = "MIT"
authors = [
        "Mark Story <mark@mark-story.com>",
        "minato128 <https://github.com/minato128>",
        "Daniel Donohue <d.michael.donohue@gmail.com>",
]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
]
edition = "2018"
keywords = [ "datadog", "dogstatsd", "statsd" ]

[dependencies]
rand = "^0.3"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
futures = "^0.3"
